--- Tuesday 2012-06-26 ---
* The map is now rendered in the correct place, sectors work perfectly.
* Added some debug functions for displaying sectors in the debug canvas.
* Fixed autotiles.

--- Monday 2012-06-25 ---
* Mergin the old sector changes with the new ones in the sector branch

--- Monday 2011-12-05 ---
* A few modest changes. 

--- Sunday 2011-12-04 ---
* Objects are now drawn on a per-position basis. For every position we see if
  there is an object there and draw it BEFORE we draw anything else on that
  layer. Is probably a bit more resource intensive, would have to see what
  impact it has when lots of objects are on the map.

--- Saturday 2011-12-03 ---
* New cache layer is so complex it would take days to implement. We'll leave it
  as it is for the moment.
* You no longer have to (or can) supply the tilenumber for an animation's
  "nextframe", in stead you have to supply how much tiles further the next
  frame tile is. Makes it much easier.
* The drawing of animated tiles has been fixed.
* Fixed the moving sprites of an object, but still need to finetune the code.
* Setting walkable tiles in tiled happens with the "walkable" property in stead
  of the old "impenetrable" one. When set to 2 it means it's half-walkable.
  You can enter it from top to bottom on the y axis, or any way on the x axis,
  but only exit the same way out (so no top to bottom exit).
  This is nice for fences.
* We need to change the place objects are drawn. Now they're drawn on top of an
  entire layer, but for Z-axis problems we need it to follow the map.

--- Friday 2011-12-02 ---
* Decided to add a new cache layer, which fundamentally changes the way the map
  is drawn.

--- Wednesday 2011-11-30 ---
* Objects have been moved to the new layout. Still need to fix some things,
  like smooth scrolling.
* There: we still need to fix object directional sprite rendering, but so much
  code has changed a commit is really needed.

--- Tuesday 2011-11-29 ---