@@ -385,6 +385,10 @@ k.operations.coord.getByCanvas = function(canvasX, canvasY, mapname){
 	
 	var mapY = k.sel.position.y + canvasY + ~~(k.links.canvas.tpc / 2) + 2
 				  - k.links.canvas.tpc;
+				  
+	var secInX = mapX % k.settings.engine.SECTORSIZE;
+	var secInY = mapY % k.settings.engine.SECTORSIZE;
+	var secLex = secInX + secInY * k.settings.engine.SECTORSIZE;
 	
 	// Coordinates beyond the map can't give a good lex value
 	if(mapX < 0 || mapX > map.width ||
@@ -404,7 +408,8 @@ k.operations.coord.getByCanvas = function(canvasX, canvasY, mapname){
 			'mouseX': absX, 'mouseY': absY,
 			'canvasX': canvasX, 'canvasY': canvasY,
 			'absX': absX, 'absY': absY,
-			'lex': lex, 'sec': sec};
+			'lex': lex, 'sec': sec, 'secLex': secLex,
+			'secX' : secInX, 'secY': secInY};
 
 }
 
@@ -434,12 +439,17 @@ k.operations.coord.getByMap = function(mapX, mapY, mapname){
 	var secY = ~~(mapY / k.settings.engine.SECTORSIZE);
 	
 	var sec = secX + secY * map.spr;
+	
+	var secInX = mapX % k.settings.engine.SECTORSIZE;
+	var secInY = mapY % k.settings.engine.SECTORSIZE;
+	var secLex = secInX + secInY * k.settings.engine.SECTORSIZE;
 	   
     return {'mapX': mapX, 'mapY': mapY,
 			'mouseX': absX, 'mouseY': absY,
 			'canvasX': canvasX, 'canvasY': canvasY,
 			'absX': absX, 'absY': absY,
-			'lex': lex, 'sec': sec};
+			'lex': lex, 'sec': sec, 'secLex': secLex,
+			'secX' : secInX, 'secY': secInY};
 }
 
 /**
@@ -475,11 +485,16 @@ k.operations.coord.getByMouse = function(mouseX, mouseY, mapname){
 	
 	var sec = secX + secY * map.spr;
 	
+	var secInX = mapX % k.settings.engine.SECTORSIZE;
+	var secInY = mapY % k.settings.engine.SECTORSIZE;
+	var secLex = secInX + secInY * k.settings.engine.SECTORSIZE;
+	
     return {'mapX': mapX, 'mapY': mapY,
 		    'mouseX': mouseX, 'mouseY': mouseY,
 			'canvasX': canvasX, 'canvasY': canvasY,
 			'absX': absX, 'absY': absY,
-			'lex': lex, 'sec': sec};
+			'lex': lex, 'sec': sec, 'secLex': secLex,
+			'secX' : secInX, 'secY': secInY};
 }
 
 /**
@@ -508,12 +523,17 @@ k.operations.coord.getByLex = function(lex, mapname){
 	var secY = ~~(mapY / k.settings.engine.SECTORSIZE);
 	
 	var sec = secX + secY * map.spr;
+	
+	var secInX = mapX % k.settings.engine.SECTORSIZE;
+	var secInY = mapY % k.settings.engine.SECTORSIZE;
+	var secLex = secInX + secInY * k.settings.engine.SECTORSIZE;
 
 	return {'mapX': mapX, 'mapY': mapY,
 			'mouseX': absX, 'mouseY': absY,
 			'canvasX': canvasX, 'canvasY': canvasY,
 			'absX': absX, 'absY': absY,
-			'lex': lex, 'sec': sec};
+			'lex': lex, 'sec': sec, 'secLex': secLex,
+			'secX' : secInX, 'secY': secInY};
 
 }
 
